--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-<h1>CReate task</h1>
+<h1>Crear tarea</h1>
 
 {{error}}
 <form action="/create_task/" method="POST">
   {% csrf_token %}
   {{form}}
 
-  <button>Save</button>
+  <button>Guardar</button>
 </form>
 {% endblock %}
