--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -11,21 +11,21 @@
   {{form.as_p}}
 
   <button>
-    Update
+    Actualizar
   </button>
 </form>
 
 <form action="{% url 'complete_task' task.id %}" method="POST">
   {% csrf_token %}
   <button>
-    complete
+    Completada
   </button>
 </form>
 
 <form action="{% url 'delete_task' task.id %}" method="POST">
   {% csrf_token %}
   <button>
-    delete
+    Eliminar
   </button>
 </form>
 
